--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="/static/css/style.css">
   <title>Termomix</title>
 </head>
@@ -13,18 +14,18 @@
 <body>
   <header>
     <div class="fixed-top">
-      <button type="button" class="btn btn-success w-100 ">Get Yours TM6 - Call Now! Alina
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-forward"
-          viewBox="0 0 16 16">
-          <path
-            d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.762.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708" />
-        </svg>
-        <i class="bi bi-telephone-fill">07939 304191</i>
+      <button type="button" class="btn btn-success w-100 ">
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
+          <img alt="Chat on WhatsApp" src="/static/img/WhatsAppButtonWhiteSmall.svg" />
+        </a>
       </button>
+
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Alina's TM6</a>
+          <a class="navbar-brand" href="#">
+            <img src="/static/img/logo.png" alt="">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,9 +55,15 @@
     <!-- hero image -->
     <div class="hero-container shadow">
       <div class="hero">
-        <img src="/static/img/banner.png" alt="hero banner img" class="img-fluid">
+        <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
       </div>
-      <div class="card text-center">
+      <div class="d-flex text-center hero-heading">
+        <span>The world's smallest, smartest kitchen - 
+          Thermomix® TM6
+        </span>
+        <button type="button" class="btn btn-success m-3">Book a Demo</button>
+      </div>
+      <!-- <div class="card text-center">
         <img src="/static/img/buy_tm6.jpeg" class="card-img-top img-fluid" alt="buy a thermomix">
         <div class="card-body">
           <p class="card-text">
@@ -66,17 +73,17 @@
             with Thermomix® TM6
           </p>
         </div>
-      </div>
+      </div> -->
     </div>
   </header>
   <div class="container text-center">
     <section id="what_is_thermomix">
-      <h1 class="m-5 gowun-batang-regular">Discover the Power of Thermomix® with Alina - Official UK Thermomix® Advisor</h1>
+      <h1 class="m-3 gowun-batang-regular">Discover the Power of Thermomix® with Alina - Official UK Thermomix® Advisor</h1>
       <div class="row">
         <div class="col">
-          <img src="/static/img/banner.jpeg" class="img-design" alt="Thermomix TM6 Image">
+          <img src="/static/img/alina.jpeg" class="img-design img-fluid" alt="Thermomix TM6 Image">
         </div>
-        <div class="col d-flex">
+        <div class="col-md-6 d-flex">
           <p>
             The Thermomix® TM6 is a revolutionary all-in-one kitchen appliance designed to simplify cooking for home chefs.
             With over 20 cooking functions—including steaming, blending, chopping, kneading, and even cooking sous vide—this
@@ -97,9 +104,9 @@
     </section>
 
     <section id="what_comes_with_thermomix">
-      <h2 class="m-5 gowun-batang-regular">What comes in the Thermomix TM6 Box </h2>
+      <h2 class="m-3 gowun-batang-regular">What comes in the Thermomix TM6 Box </h2>
       <div class="row">
-        <div class="col d-flex">
+        <div class="col-md-6 d-flex">
           <p>
             The Thermomix® TM6 not only simplifies meal prep but also brings a world of culinary creativity right to your kitchen. It is a an all-in-one solution for your kitchen, equipped with several essential accessories.
           </p>
@@ -107,29 +114,52 @@
             These include the mixing bowl, varoma steamer, splash guard, butterfly whisk, simmering basket with lid, measuring cup, and spatula. With these tools, you can steam, blend, whisk, sauté, and slow cook effortlessly. 
           </p>   
           <p>
-            It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve nutrition, and enjoy stress-free meal preparation. 
+            It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve nutrition, and enjoy stress-free meal preparation. <br>
+            <em class="cooking-demo">Only available to purchase through a Thermomix® Advisor</em>
           <p>
           <button type="button" class="btn btn-success">Buy - TM6</button>
         </div>
-        <div class="col">
-          <img src="/static/img/tm-6.webp" class="img-design" alt="Thermomix TM6 Image">
+        <div class="col-md-6">
+          <img src="/static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
           </div>
       </div>
     </section>
   </div>
   <div class="container-fluid p-0 text-center">
     <section class="buy_thermomix">
-      <h3 class="m-5 gowun-batang-regular">Unlock Your Kitchen Full Potential with the Ultimate All-in-One Assistant! </h3>
-      <img src="/static/img/buy-tm-6.png" alt="buy thermomix">
-      <div class="buy_thermomix-btn">
-        <button type="button" class="btn btn-success m-3 ">Buy Now</button>
-        <button type="button" class="btn btn-success m-3">Book a Demo</button>
+      <h3 class="m-3 gowun-batang-regular">Unlock Your Kitchen Full Potential with the Ultimate All-in-One Assistant! </h3>
+      <div class="buy_thermomix-img">
+        <img src="/static/img/buy-tm-6.png" class="img-fluid" alt="buy thermomix">
+        <div class="buy_thermomix-btn">
+          <button type="button" class="btn btn-success m-3 ">Buy Now</button>
+          <button type="button" class="btn btn-success m-3">Book a Demo</button>
+        </div>
       </div>
     </section>
   </div>
   
   <!-- Footer -->
-  <footer class="mx-auto text-center btn-success m-5">
+  <footer class="tex-white mx-auto text-center py-4">
+    <section class="footer">
+      <h4 class="m-3">Have Questions? Ready to Book a Demo or Purchase?</h4>
+      <p>
+        I’m here to assist! Whether you’re looking for more information, want to schedule a live cooking demo, or are ready to buy, feel free to get in touch.
+      </p>
+      <p>
+        Simply click the WhatsApp button below, and I’ll be happy to help you on your Thermomix® journey.
+      </p>
+      <div>
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
+          <img alt="Chat on WhatsApp" src="/static/img/WhatsAppButtonWhiteSmall.svg" />
+        </a>
+      </div>
+    </section>
+    
+    <div class="footer-links">
+      <a href="/recipes.html">Recipes</a> | 
+      <a href="/buy.html">Buy Thermomix</a> | 
+      <a href="/demo.html">Book a Demo</a>
+    </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
