--- a/static/templates/demo.html
+++ b/static/templates/demo.html
@@ -12,83 +12,129 @@
 
 <body>
     <header>
-        <div class="fixed-top">
-            <button type="button" class="btn btn-success w-100 ">Get Yours TM6 - Call Now! Alina
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-telephone-forward" viewBox="0 0 16 16">
-                    <path
-                        d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.762.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708" />
-                </svg>
-                <i class="bi bi-telephone-fill">07939 304191</i>
-            </button>
-            <!-- Navbar -->
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Alina's TM6</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Recipes</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Buy Thermomix</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="demo.html">Book Demo</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Alina's TM6</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Recipes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Buy Thermomix</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="demo.html">Book Demo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
         <!-- hero image -->
         <div class="hero-container shadow">
             <div class="hero">
-                <img src="/static/img/banner.png" alt="hero banner img" class="img-fluid">
-            </div>
-            <div class="card text-center">
-                <img src="/static/img/buy_tm6.jpeg" class="card-img-top img-fluid" alt="buy a thermomix">
-                <div class="card-body">
-                    <p class="card-text">
-                        <span>
-                            <a href="./demo.html" class="cooking-demo">Join Me</a>
-                        </span> for a free cooking demo to find how you can <span class="cooking-demo">save time and
-                            money</span>
-                        with Thermomix® TM6
-                    </p>
-                </div>
+                <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid">
             </div>
         </div>
     </header>
-    <div class="row">
-        <div class="col d-flex">
-            <p>
-                Having a Thermomix® Advisor means you’re not just buying a kitchen appliance; you’re gaining a dedicated
-                support partner. I’ll assist you from the moment you purchase your TM6, guiding you on how to use it
-                effectively, helping you navigate the Cookidoo Recipe Platform, and inviting you to exclusive cooking
-                classes. Whether you need recipe tips or ongoing advice, I'm here to ensure you make the most of your
-                investment and enjoy a rewarding culinary journey!
-                Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and discover how
-                the
-                Thermomix can transform your cooking experience today!
-            </p>
-            <button type="button" class="btn btn-success">Buy - TM6</button>
+    <section>
+        <div class="card card-book-demo mx-auto text-center">
+            <h1 class="card-title m-3 gowun-batang-regular">Book a Demo</h1>
+            <div class="card-body">
+                    <div class="row">
+                    <div class="col-md-6 d-flex">
+                        <p>
+                            <em>Having a <b>Thermomix® Advisor</b> means you’re not just buying a kitchen appliance; you’re
+                                gaining
+                                a
+                                dedicated
+                                support partner.</em>
+                        <p>I’ll assist you from the moment you purchase your TM6, guiding you on how to use it
+                            effectively, helping you navigate the <a href="https://cookidoo.co.uk/foundation/en-GB"
+                                class="cooking-demo" target="_blank">Cookidoo Recipe Platform</a>, and inviting you to
+                            exclusive
+                            cooking
+                            classes.
+                        </p>
+                        <p>Whether you need recipe tips or ongoing advice, I'm here to ensure you make the most of your
+                            investment and enjoy a rewarding culinary journey! <br><br>
+
+                            Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and
+                            discover how
+                            the
+                            Thermomix can transform your cooking experience today!</p>
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="/static/img/buy_tm6.jpeg" class="card-img-top img-design" alt="card image">
+                    </div>
+
+                    <!-- Book a demo Form -->
+                    <form action="book_demo">
+                        <div class="row">
+                            <div class="form-group col-md-6">
+                                <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                            </div>
+                            <div class="form-group col-md-6 mb-3">
+                                <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+                            </div>
+                            <div class="mb-3">
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+                            </div>
+                            <div class="mb-3">
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"
+                                    placeholder="Leave a message..."></textarea>
+                            </div>
+                            <div>
+                                <button type="submit" class="btn btn-success">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="col">
-            <img src="/static/img/buy-tm-6.webp" class="img-design" alt="Thermomix TM6 Image">
-        </div>
+    </section>
+
+    <section class="how_it_works text-center">
+        <h2>How it Works</h2>
+    </section>
+
+    <!-- Footer -->
+  <footer class="tex-white mx-auto text-center py-4">
+    <section class="footer">
+      <h4 class="m-3">Have Questions? Ready to Book a Demo or Purchase?</h4>
+      <p>
+        I’m here to assist! Whether you’re looking for more information, want to schedule a live cooking demo, or are ready to buy, feel free to get in touch.
+      </p>
+      <p>
+        Simply click the WhatsApp button below, and I’ll be happy to help you on your Thermomix® journey.
+      </p>
+      <div>
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
+          <img alt="Chat on WhatsApp" src="/static/img/WhatsAppButtonWhiteSmall.svg" />
+        </a>
+      </div>
+    </section>
+    <!-- Footter links  -->
+    <div class="footer-links">
+      <a href="/recipes.html">Recipes</a> | 
+      <a href="/buy.html">Buy Thermomix</a> | 
+      <a href="/demo.html">Book a Demo</a>
     </div>
+    <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
+  </footer>
 </body>
 
 </html>
