--- a/static/templates/demo.html
+++ b/static/templates/demo.html
@@ -29,13 +29,13 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Recipes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Buy Thermomix</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="demo.html">Book Demo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Recipes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
