--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,6 +160,7 @@ h3 {
 
 .buy_thermomix-btn {
   position: absolute;
+  display: inline-flex;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
