--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -8,7 +8,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="/static/css/style.css">
-  <title>Termomix</title>
+  <title>Alina Official Thermomix Advisor</title>
 </head>
 
 <body>
@@ -35,10 +35,7 @@
                 <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Recipes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
