--- a/static/templates/buy_thermomix.html
+++ b/static/templates/buy_thermomix.html
@@ -14,43 +14,48 @@
     <header>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="/static/img/logo.png" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="demo.html">Book Demo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Recipes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="/static/img/logo.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="demo.html">Book Demo</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+              </ul>
             </div>
+          </div>
         </nav>
+    
         <!-- hero image -->
         <div class="hero-container shadow">
-            <div class="hero">
-                <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid">
-            </div>
+          <div class="hero">
+            <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
+          </div>
+          <div class="d-flex text-center hero-heading">
+            <span>The world's smallest, smartest kitchen -
+              Thermomix® TM6
+            </span>
+            <a href="demo.html">
+              <button type="button" class="btn btn-success m-3">Book a Demo</button>
+            </a>
+          </div>
         </div>
-    </header>
+      </header>
     <div class="main-container">
         <section class="book-demo">
             <div class="card card-book-demo mx-auto">
