--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,8 +79,7 @@ header .btn-success {
 /* Hero Container */
 .hero-container {
   position: relative;
-  height: 100vh;
-  /* Set to 100vh for full height */
+  height: calc(100vh - 90px);
   overflow: hidden;
 }
 
@@ -88,8 +87,6 @@ header .btn-success {
 .hero {
   position: absolute;
   width: 100vw;
-  padding-bottom: 36.25%;
-  /*  16:9 Aspect Ratio (9/16 = 0.5625 * 100)  */
   height: 100vh;
 }
 
@@ -99,7 +96,7 @@ header .btn-success {
   width: 100%;
   height: 100vh;
   object-fit: cover;
-  /* object-position: 17% top; */
+  box-shadow: 0px 5px 11px 0px rgba(180, 181, 179, 0.73);
 }
 
 .hero-heading {
@@ -107,12 +104,13 @@ header .btn-success {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-family: serif;
   color: white;
   background-color: #76594261;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  padding: 1.2rem;
 }
 
 .img-design {
@@ -213,14 +211,18 @@ footer a:hover {
   color: var(--nav_green);
 }
 
-.card-book-demo {
+.card-body {
+  color: #607D8B;
+}
+
+.card-top {
   max-width: 80vw;
-  top: -150px;
+  bottom: 10vh;
   border-radius: 50px 50px 5px 5px;
   text-wrap: balance;
   border: 0;
   background: var(--bg-colour);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 1px 2px rgba(20, 20, 20, -0.8);
 }
 
 .form-control::placeholder {
@@ -245,7 +247,8 @@ footer a:hover {
   .card {
     width: 80vw;
     /* Wider on smaller screens */
-    top: -40vw
-      /* Adjust top position */
+  }
+  .card-body {
+    margin-top: -15px;
   }
 }
