--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,10 @@
   padding: 0;
 }
 
+section {
+  padding: 0 0 20px ;
+}
+
 .btn-success {
   background-color: var(--btn-success);
   border: none;
@@ -130,6 +134,7 @@ h1,
 h2,
 h3 {
   color: var(--nav_green);
+  margin: 1.5rem 0;
 }
 
 .d-flex {
@@ -202,7 +207,6 @@ footer a:hover {
 .row,
 .col {
   max-width: 100%;
-  padding: 15px;
   margin: 0 auto;
 }
 
@@ -216,8 +220,8 @@ footer a:hover {
 }
 
 .card-top {
-  max-width: 80vw;
-  bottom: 10vh;
+
+  bottom: 15vh;
   border-radius: 50px 50px 5px 5px;
   text-wrap: balance;
   border: 0;
@@ -230,7 +234,7 @@ footer a:hover {
 }
 
 .how_it_works {
-  margin-top: -80px;
+  margin-top: -7rem;
 }
 
 
@@ -241,11 +245,59 @@ footer a:hover {
 
 .bg-colour {
   background-color: var(--bg-colour);
+  margin-bottom: 2rem;
 }
 
+/* key frame Animation */
+.js-scroll {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out; /* Smooth fade and slide */
+}
+
+.scrolled {
+  opacity: 1;
+  transform: translateY(0);    /* Reset position */
+}
+
+.scrolled.slide-left {
+  animation: slide-in-left 1s ease-in-out both;
+}
+
+.scrolled.slide-right {
+  animation: slide-in-right 1s ease-in-out both;
+}
+
+@keyframes slide-in-left {
+  0% {
+    -webkit-transform: translateX(-100px);
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+/* Media Queries */
 @media (max-width: 768px) {
   .card {
-    width: 80vw;
+    /* width: 80vw; */
     /* Wider on smaller screens */
   }
   .card-body {
